Using faster and more fitting ArrayDeque